# geotech-ai-agents

./: README.md  pyproject.toml
output/: preliminary_geo_report.md
src/geo_assessment_crew/: __init__.py  crew.py  main.py
src/geo_assessment_crew/config/: agents.yaml  tasks.yaml
