[tool.poetry]
name = "geo-assessment-crew"
version = "0.1.0"
description = "CrewAI project for preliminary geotechnical assessment"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
crewai = "^0.35.8"
crewai-tools = "^0.2.6"
langchain-openai = "^0.1.8"
python-dotenv = "^1.0.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pyright]

[tool.ruff]
line-length = 88